# airbnb-clone

./: .gitignore  railway.toml
backend/: README.md  pyproject.toml  render.yaml  requirements.txt
backend/bookings/: models.py  serializers.py  urls.py  views.py
backend/bookings/migrations/: 0003_booking_check_in_time_booking_check_out_time.py
backend/categories/: admin.py  serializers.py  urls.py  views.py
backend/chatbot/: admin.py  apps.py  models.py  urls.py  views.py
backend/chatbot/agents/: agent.py  embeddings.py  experience_agent.py  prompts.py  room_agent.py  session.py  tools.py  triage_agent.py
backend/chatbot/migrations/: 0001_initial.py  0002_chatlog_cards.py  0003_alter_chatbotconfig_model_name.py  0004_alter_chatbotconfig_model_name.py
backend/config/: authentication.py  settings.py  urls.py
backend/direct_messages/: models.py
backend/experiences/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/experiences/migrations/: 0005_experience_max_participants.py  0006_experience_embedding.py
backend/houses/: admin.py  models.py
backend/houses/migrations/: 0001_initial.py  0002_initial.py  0003_house_pets_allowed.py  (+1 more)
backend/medias/: admin.py  models.py  serializers.py  utils.py  validators.py
backend/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
backend/rooms/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/wishlists/: models.py  serializers.py  urls.py  views.py
(+47 files in other folders)
